--- a/lab11/AD_Z11.ipynb
+++ b/lab11/AD_Z11.ipynb
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,7 +1772,7 @@
     "    \n",
     "    def backward(self, dl_by_dz: np.ndarray) -> np.ndarray:\n",
     "        #raise NotImplementedError(\"Implement the backward method\")\n",
-    "\n",
+    "        # f * (1 - f) daje df dla tej funkcji\n",
     "        dz_by_dy = self.recent_result * (np.ones_like(self.recent_result) - self.recent_result)\n",
     "\n",
     "        return dl_by_dz * dz_by_dy"
