--- a/lab13/AD_Z13.ipynb
+++ b/lab13/AD_Z13.ipynb
@@ -701,7 +701,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "working_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -715,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
